# Sculptor_2

./: CMakeLists.txt  README.md  cutbox.cpp  cutbox.h  cutellipsoid.cpp  cutellipsoid.h  cutsphere.cpp  cutsphere.h  cutvoxel.cpp  cutvoxel.h  figurageometrica.cpp  figurageometrica.h  lerDados.cpp  lerDados.h  main.cpp  putbox.cpp  putbox.h  putellipsoid.cpp  putellipsoid.h  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  sculptor.cpp  sculptor.h  texto.txt  voxel.h
Doxygen/: Doxyfile
Doxygen/docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  class_cut_box-members.html  class_cut_box.html  class_cut_ellipsoid-members.html  class_cut_ellipsoid.html  class_cut_sphere-members.html  class_cut_sphere.html  class_cut_voxel-members.html  class_cut_voxel.html  class_figura_geometrica-members.html  class_figura_geometrica.html  class_ler_dados-members.html  class_ler_dados.html  class_put_box-members.html  class_put_box.html  class_put_ellipsoid-members.html  class_put_ellipsoid.html  class_put_sphere-members.html  class_put_sphere.html  class_sculptor-members.html  class_sculptor.html  classes.html  classputvoxel-members.html  classputvoxel.html  cutbox_8cpp.html  cutbox_8cpp_source.html  cutbox_8h.html  cutbox_8h_source.html  cutellipsoid_8cpp.html  cutellipsoid_8cpp_source.html  cutellipsoid_8h.html  cutellipsoid_8h_source.html  cutsphere_8cpp.html  cutsphere_8cpp_source.html  cutsphere_8h.html  cutsphere_8h_source.html  cutvoxel_8cpp.html  cutvoxel_8cpp_source.html  cutvoxel_8h.html  (+49 more)
output/: arquivo.txt
